# plone-codemod

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  README.md  migration_config.yaml  pyproject.toml  runner.py
.github/workflows/: qa.yaml  tests.yaml
codemods/: import_migrator.py
docs/: .gitignore
docs/sources/: conf.py  index.md
docs/sources/_templates/: layout.html
docs/sources/explanation/: architecture.md  index.md  maintenance-strategy.md  why-libcst.md
docs/sources/how-to/: add-bootstrap-rule.md  add-import-rule.md  add-pt-rule.md  add-semgrep-rule.md  add-zcml-rule.md  index.md  run-selective-phases.md  use-custom-config.md
docs/sources/reference/: cli.md  config-format.md  index.md  phases.md  semgrep-rules.md
docs/sources/tutorials/: index.md  migrate-your-addon.md
semgrep_rules/: plone6_deprecated.yaml
src/plone_codemod/: __init__.py  cli.py  import_migrator.py  migration_config.yaml  namespace_migrator.py  packaging_migrator.py  pt_migrator.py  zcml_migrator.py
templates/: pt_migrator.py
tests/: test_cli.py  test_import_migrator.py  test_namespace_migrator.py  test_packaging_migrator.py  test_pt_migrator.py  test_zcml_migrator.py
zcml/: zcml_migrator.py
